# hamlet

./: .env.example  .gitignore  ARCHITECTURE.md  CLAUDE.md  Cargo.toml  DEMO_GUIDE.md  E2E_FILE_UPLOADS_PLAN.md  Fingerprint.md  HAMLET_FRAMEWORK.md  LICENSE  README.md  ROADMAP.md  ROADMAP2_REVISED.md  SCHEMA_ADMIN_UI_PLAN.md  TEST_RUNNER_FIX.md  build.rs  check_test_status.sh  cognito-plan.md  database_types_design.md  dev-server.js  generate-elm-types.rs  horatio-plans.md  js-to-wasm-migration.md  json-to-wasm-migration.md  latest_priorities.md  manifest.md  multi-project.md  package-lock.json  package.json  review-plan.md  review1.md  review_guide.md  run-server.js  run_all_tests.sh  run_all_tests_buildamp_packages.sh  run_all_tests_fixed.sh  run_all_tests_hamlet_packages.sh  run_all_tests_v2.sh  steps.md  test-auto-decoration.js  (+6 more)
.buildamp/: generate-all-v2.js  generate-all.js  generate.js
.elm-rs-gen/: Cargo.toml
backend/: package-lock.json  package.json  server.js
buildamp-fresh-test/: Cargo.toml  index.html  package-lock.json  package.json  vite.config.js
buildamp-tests/: test-elm-generation-comparison.js
buildamp-tests/test-validation/: Cargo.toml  package-lock.json  package.json
buildamp-tests/test-validation/.buildamp/: config.js
buildamp-tests/test-validation/.buildamp/generation/: api_routes.js  api_routes_shared.js  browser_storage.js  database_queries_shared.js  elm_handlers.js  elm_shared_modules.js  kv_store.js
buildamp-tests/test-validation/app/horatio/models/: api.rs
buildamp-tests/test-validation/app/horatio/models/api/: blog.rs
buildamp-tests/test-validation/app/horatio/models/db/: blog_post.rs  category.rs  post_category.rs
buildamp-tests/test-validation/frontend/src/: index.js
buildamp-tests/test-validation/src/: lib.rs
buildamp-tests/test-validation/src/framework/: storage_types.rs
buildamp-tests/test-validation/src/models/api/: blog.rs
demo-codegen/: buildamp.wasm
extension/: background.js  elm.json  manifest.json  popup-glue.js  popup.html  popup.js  test-harness.html
frontend/: elm.js  elm.json  index.html  package-lock.json  package.json  vite.config.js
generate-elm-codecs/: Cargo.toml
my-test-project/: package.json
notes/: ARCHITECT_HANDOFF.md  DEMO_GUIDE.md  E2E_FILE_UPLOADS_PLAN.md  MIGRATION_CLEANUP.md  MISSING_GENERATION_PIECES.md  MOBILE_ROADMAP.md  MULTI_APP_SUPPORT.md  MULTI_APP_TEST_IMPACTS.md  PHASE1_EVENT_SYSTEM_AUDIT.md  PHASE1_FILE_UPLOAD_TYPES.md  PHASE2_NATIVE_CAPABILITIES.md  PHASE3_BACKGROUND_WORKERS.md  README.md  ROADMAP2.md  ROADMAP2_REVISED.md  SERVER_SIDE_VALIDATION_PLAN.md  STANDALONE_ELM_GENERATOR_PLAN.md  TEA_HANDLER_ARCHITECTURE.md  TEA_HANDLER_IMPLEMENTATION.md  TEST_FIXING_PLAN.md  (+43 more)
shared/proto-rust/: Cargo.toml
shared/proto-rust/src/: elm_export.rs  lib.rs  shared_types.rs
shared/proto-rust/tests/: elm_gen.rs  macro_test.rs
(+546 files in other folders)
