[package]
name = "proto-rust"
version = "0.1.0"
edition = "2021"
description = "BuildAmp core Rust crate"
repository = "https://github.com/example/buildamp"
license = "MIT"

[lib]
crate-type = ["rlib"]

[[bin]]
name = "buildamp"
path = "src/bin/buildamp.rs"
required-features = ["cli"]

[build-dependencies]
heck = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde-reflection = "0.3"

[dependencies]
elm_rs = "0.2"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
buildamp-macro = { path = ".buildamp/macros" }
utoipa = { version = "4.2", features = ["preserve_order", "preserve_path_order"] }
inventory = "0.3"
clap = { version = "4.0", features = ["derive"], optional = true }

[features]
default = []
cli = ["clap"]
