[package]
name = "proto_rust"
version = "0.1.0"
edition = "2021"
description = "BuildAmp project"
repository = "https://github.com/example/buildamp-project"
license = "MIT"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
elm_rs = "0.2"
inventory = "0.3"
utoipa = { version = "4.2", features = ["preserve_order", "indexmap"] }
wasm-bindgen = "0.2"
js-sys = "0.3"
buildamp_macro = { path = ".buildamp/macros" }

# Dependencies for basic BuildAmp functionality

[profile.release]
lto = true
opt-level = 'z'
