[package]
name = "proto-rust"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[build-dependencies]
heck = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde-reflection = "0.3"

[dependencies]
elm_rs = "0.2"
serde_json = "1.0"
wasm-bindgen = "0.2"
serde = { version = "1.0", features = ["derive"] }
horatio-macro = { path = "../horatio-macro" }
utoipa = { version = "4.2", features = ["preserve_order", "preserve_path_order"] }